<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:theme="@style/Theme.AppCompat">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFFFF"
            android:paddingBottom="12dp">

            <androidx.constraintlayout.helper.widget.Flow
                android:id="@+id/flowButtonsSourceSelect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:constraint_referenced_ids="buttonHearingsAgenda, buttonCourtDecisions, buttonCourtRulings, buttonPublicSummons, buttonCourtClaimsAndCases"
                app:flow_wrapMode="chain"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonHearingsAgenda"
                style="@style/ButtonDefault"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_hearings_agenda"
                app:layout_constraintEnd_toStartOf="@id/buttonCourtDecisions"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonCourtDecisions"
                style="@style/ButtonDefault"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_court_decisions"
                app:layout_constraintEnd_toStartOf="@id/buttonCourtRulings"
                app:layout_constraintStart_toEndOf="@id/buttonHearingsAgenda"
                app:layout_constraintTop_toTopOf="@id/buttonHearingsAgenda" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonCourtRulings"
                style="@style/ButtonDefault"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_court_rulings"
                app:layout_constraintEnd_toStartOf="@id/buttonPublicSummons"
                app:layout_constraintStart_toEndOf="@id/buttonCourtDecisions"
                app:layout_constraintTop_toTopOf="@id/buttonCourtDecisions" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonPublicSummons"
                style="@style/ButtonDefault"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_public_summons"
                app:layout_constraintEnd_toStartOf="@id/buttonCourtClaimsAndCases"
                app:layout_constraintStart_toEndOf="@id/buttonCourtRulings"
                app:layout_constraintTop_toTopOf="@id/buttonCourtRulings" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonCourtClaimsAndCases"
                style="@style/ButtonDefault"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_court_claims_and_cases"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/buttonPublicSummons"
                app:layout_constraintTop_toTopOf="@id/buttonPublicSummons" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="12dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonReset"
            style="@style/ButtonDefault"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_weight="1"
            android:text="@string/title_reset"
            app:backgroundTint="@color/gray" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonApply"
            style="@style/ButtonDefault"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/title_apply"
            app:backgroundTint="@color/grayLight" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>